--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -76,8 +76,9 @@
     padding-bottom: 1rem;
 }
 
-.apresentacao strong {
+strong {
     color: var(--primaria);
+    font-weight: 550;
 }
 
 .conexao {
@@ -85,10 +86,6 @@
     flex-direction: column;
     gap: 1rem;
     text-align: center;
-}
-
-.conexao strong {
-    color: var(--primaria);
 }
 
 .textoConexao {
