--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,6 +6,8 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+    position: fixed;
+    z-index: 1000;
 }
 
 .header span {
