--- a/src/index.css
+++ b/src/index.css
@@ -19,5 +19,18 @@
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  width: 8px;  
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--primaria); 
+  border-radius: 10px; 
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--secundaria);
+}
+
 
 
