--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -76,6 +76,10 @@
     padding-bottom: 1rem;
 }
 
+.apresentacao h3 {
+    font-size: 22px;
+}
+
 strong {
     color: var(--primaria);
     font-weight: 550;
@@ -89,11 +93,11 @@ strong {
 }
 
 .textoConexao {
-    font-size: 25px;
+    font-size: 30px;
 }
 
 .textoConexaoInferior {
-    font-size: 15px;
+    font-size: 18px;
 }
 
 .icones {
