--- a/src/pages/Projetos/Projetos.module.css
+++ b/src/pages/Projetos/Projetos.module.css
@@ -7,8 +7,8 @@
 }
 
 .cardProjeto {
+  background-color: var(--cinza-claro);
   width: 30%;
-  border: solid var(--primaria);
   border-radius: 10px;
   padding: 2rem;
   color: var(--cinza-escuro);
@@ -28,20 +28,25 @@
 }
 
 .titulo {
-  font-size: 24px;
+  font-size: 36px;
   flex-grow: 1;
   text-align: center;
   padding-left: 6rem;
 }
 
 .areaDev {
-  font-size: 12px;
+  font-size: 16px;
   color: var(--primaria);
+}
+
+.imagem {
+  width: 100%;
+  border-radius: 10px;
 }
 
 .botoes {
   display: flex;
-  gap: 1rem;
+  gap: 2rem;
   font-size: 16px;
 }
 
